--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <button id="btn">Motivatsiya ko'rsat</button>
+      <button id="btn">Motivation Quote</button>
       <h3 id="motiv"></h3>
     </div>
     <script src="./app.js"></script>
